specs/plex/deployment.yaml
apiVersion: apps/v1beta1 
kind: Deployment

metadata:
  name: plex
spec:
  replicas: 1 
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true
      containers:
        - name: plex
          image: plexinc/pms-docker:1.13.8.5395-10d48da0d
          ports:
            - containerPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: transcode
              mountPath: /transcode
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: transcode
          persistentVolumeClaim:
            claimName: plex-transcode
        - name: data
          persistentVolumeClaim:
            claimName: shared-media
