specs/plex/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: plex

spec:
  selector:
    app: plex 
  ports:
    - name: http
      port: 32400
