specs/plex/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: "kube-system/client-ca-ingress"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"

spec:
  tls:
     - secretName: plex.d26a.de
       hosts:
         - plex.d26a.de
  rules:
  - host: plex.d26a.de
    http:
      paths:
        - path: /
          backend:
            serviceName: plex
            servicePort: 32400
